--- a/index.html
+++ b/index.html
@@ -195,13 +195,13 @@
             <div class="skill-section-title section-title-1">
               <img src="img/sergi-kabrera-2xU7rYxsTiM-unsplash.jpg" loading="lazy" alt="Keyboard">
               <h3>web accessibility & <br> responsive web design</h3>
-              <p>User friendly websites look good on all devices.</p>
+              <a href="pages/skills.html">read more<i class="fas fa-angles-right"></i></a>
+              <!-- <p>User friendly websites look good on all devices.</p> -->
               <ul>
                 <li>HTML-5</li>
                 <li>CSS-3</li>
                 <li>Javascript</li>
               </ul>
-              <a href="pages/skills.html">read more<i class="fas fa-angles-right"></i></a>
             </div>
           </div>
 
@@ -209,13 +209,13 @@
             <div class="skill-section-title section-title-2">
               <img src="img/martin-katler-o9XN28KdyN8-unsplash.jpg" loading="lazy" alt="Keyboard">
               <h3>immersive Interface &<br>Engaging Experience</h3>
-              <p>User friendly websites look good on all devices.</p>
+              <a href="pages/skills.html">read more<i class="fas fa-angles-right"></i></a>
+              <!-- <p>User friendly websites look good on all devices.</p> -->
               <ul>
                 <li>Sass</li>
                 <li>React-JS</li>
                 <li>JQuery</li>
               </ul>
-              <a href="pages/skills.html">read more<i class="fas fa-angles-right"></i></a>
             </div>
           </div>
 
@@ -223,14 +223,14 @@
             <div class="skill-section-title section-title-3">
               <h3>Version Control &<br>development tools</h3>
               <img src="img/hugo-barbosa-TnG2q8FtXsg-unsplash.jpg" loading="lazy" alt="Keyboard">
-              <p>User friendly websites look good on all devices.</p>
+              <!-- <p>User friendly websites look good on all devices.</p> -->
+              <a href="pages/skills.html">read more<i class="fas fa-angles-right"></i></a>
               <ul>
                 <li>Git</li>
                 <li>GitHub</li>
                 <li>Node-JS</li>
                 <li>Visual Studio Code</li>
               </ul>
-              <a href="pages/skills.html">read more<i class="fas fa-angles-right"></i></a>
             </div>
           </div>
 
@@ -238,12 +238,12 @@
             <div class="skill-section-title section-title-4">
               <img src="img/liana-mikah-sK1nYjXcXCY-unsplash.jpg" loading="lazy" alt="Keyboard">
               <h3>Interpersonal & <br> Soft Skills</h3>
-              <p>Communication & Team work skills</p>
+              <a href="pages/skills.html">read more<i class="fas fa-angles-right"></i></a>
+              <!-- <p>Communication & Team work skills</p> -->
               <ul>
                 <li>Customer Care</li>
                 <li>Creativity</li>
               </ul>
-              <a href="pages/skills.html">read more<i class="fas fa-angles-right"></i></a>
             </div>
           </div>
 
