skills-section .button

--- a/index.html
+++ b/index.html
@@ -201,7 +201,7 @@
                 <li>CSS-3</li>
                 <li>Javascript</li>
               </ul>
-              <a href="pages/skills.html">read more<i class="fas fa-angles-right"></i></a>
+              <a href="pages/skills.html" class="button button-dark">read more<i class="fas fa-angles-right"></i></a>
             </div>
           </div>
 
@@ -215,7 +215,7 @@
                 <li>React-JS</li>
                 <li>JQuery</li>
               </ul>
-              <a href="pages/skills.html">read more<i class="fas fa-angles-right"></i></a>
+              <a href="pages/skills.html" class="button button-dark">read more<i class="fas fa-angles-right"></i></a>
             </div>
           </div>
 
@@ -230,7 +230,7 @@
                 <li>Node-JS</li>
                 <li>Visual Studio Code</li>
               </ul>
-              <a href="pages/skills.html">read more<i class="fas fa-angles-right"></i></a>
+              <a href="pages/skills.html" class="button button-light">read more<i class="fas fa-angles-right"></i></a>
             </div>
           </div>
 
@@ -243,7 +243,7 @@
                 <li>Customer Care</li>
                 <li>Creativity</li>
               </ul>
-              <a href="pages/skills.html">read more<i class="fas fa-angles-right"></i></a>
+              <a href="pages/skills.html" class="button button-light">read more<i class="fas fa-angles-right"></i></a>
             </div>
           </div>
 
