skills-section border

--- a/pages/skills.html
+++ b/pages/skills.html
@@ -166,7 +166,7 @@
     <div class="skills-header">
       <h2 title="skills" data-text="skills" class="section-title io-item io-item">Sk<span>i</span>lls</h2>
     </div>
-    <div class="skills-content container">
+    <div class="skills-content">
       <!-- CONTAINER FOR IO TRANSITIONS -->
       <div class="io-container">
         
