--- a/index.html
+++ b/index.html
@@ -225,8 +225,7 @@
               <img src="img/hugo-barbosa-TnG2q8FtXsg-unsplash.jpg" loading="lazy" alt="Keyboard">
               <!-- <p>User friendly websites look good on all devices.</p> -->
               <ul>
-                <li>Git</li>
-                <li>GitHub</li>
+                <li>Git & GitHub</li>
                 <li>Node-JS</li>
                 <li>Visual Studio Code</li>
               </ul>
