--- a/index.html
+++ b/index.html
@@ -201,10 +201,9 @@
                 <li>CSS-3</li>
                 <li>Javascript</li>
               </ul>
-              <a href="pages/skills.html" class="button button-dark">read more<i class="fas fa-angles-right"></i></a>
+              <a href="pages/skills.html" class="btn btn-light">read more<i class="fas fa-angles-right"></i></a>
             </div>
           </div>
-
           <div class="skill-section section-2">
             <div class="skill-section-title section-title-2">
               <img src="img/martin-katler-o9XN28KdyN8-unsplash.jpg" loading="lazy" alt="Keyboard">
@@ -215,7 +214,7 @@
                 <li>React-JS</li>
                 <li>JQuery</li>
               </ul>
-              <a href="pages/skills.html" class="button button-dark">read more<i class="fas fa-angles-right"></i></a>
+              <a href="pages/skills.html" class="btn btn-light">read more<i class="fas fa-angles-right"></i></a>
             </div>
           </div>
 
@@ -229,7 +228,7 @@
                 <li>Node-JS</li>
                 <li>Visual Studio Code</li>
               </ul>
-              <a href="pages/skills.html" class="button button-light">read more<i class="fas fa-angles-right"></i></a>
+              <a href="pages/skills.html" class="btn btn-dark">read more<i class="fas fa-angles-right"></i></a>
             </div>
           </div>
 
@@ -242,7 +241,7 @@
                 <li>Customer Care</li>
                 <li>Creativity</li>
               </ul>
-              <a href="pages/skills.html" class="button button-light">read more<i class="fas fa-angles-right"></i></a>
+              <a href="pages/skills.html" class="btn btn-dark">read more<i class="fas fa-angles-right"></i></a>
             </div>
           </div>
 
