about and app.js logic

--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
               <li>
                 <i class="fas fa-lightbulb"></i>
                 <a href="#" title="web development skills" data-after="Home"
-                  class="scroll-link scroll-li active">home</a>
+                  class="scroll-link scroll-li">home</a>
               </li>
               <!-- SKILLS LINK -->
               <li>
