--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
               <!-- HOME LINK -->
               <li>
                 <i class="fas fa-lightbulb"></i>
-                <a href="index.html" title="web development skills" data-after="Home"
+                <a href="#" title="web development skills" data-after="Home"
                   class="scroll-link scroll-li">home</a>
               </li>
               <!-- SKILLS LINK -->
