--- a/pages/skills.html
+++ b/pages/skills.html
@@ -650,6 +650,21 @@
       <a href="#contact"><i class="fas fa-envelope"></i></a>
     </div>
   </div>
+
+  <!-- ACTIVE PAGE CLASS TOGGLE -->
+  <script>
+    const activePage = window.location.pathname;
+    const navLinks = document.querySelectorAll('.scroll-li');
+    console.log(activePage);
+
+    navLinks.forEach(link => {
+      if (link.href.includes(`${activePage}`)) {
+        link.classList.add('active');
+      }
+    });
+  </script>
+
+
 </body>
 
 </html>
