--- a/index.html
+++ b/index.html
@@ -329,7 +329,7 @@
         </div>
         <div class="article-container">
           <article class="about-article">
-            <div class="about-intro io-item">
+            <div class="about-intro">
             <p class="intro">Boitumelo 'Shakex' Sempe is a South Africa based International Relations graduate and Front-End Web
               Developer specializing in Responsive Web Design and User Experience.
             </p>
@@ -339,7 +339,7 @@
             <a href="pages/about.html" class="btn btn-primary">About Page<i class="fas fa-arrow-up-right-from-square"></i></a>
 
           </div>
-            <div class="about-body io-item">
+            <!-- <div class="about-body">
             <p>
               <i class="fa-brands fa-free-code-camp"></i>
               <span class="item io-item-title">FreeCodeCamp</span>
@@ -362,7 +362,6 @@
             </p>
 
             <p>
-              <!-- <i class="fa-solid fa-code"></i> -->
               <i class="fab fa-html5"></i>
               I use <a href="https://html.com/semantic-markup/" target="_blank">HTML-5 Semantic Markup</a> to code accessible and responsive web pages. 
               Additionally, I implement On-Page Search Engine Optimization techniques.
@@ -379,7 +378,7 @@
               <i class="fa-brands fa-react"></i>
               I am currently learning the javascript framework <a href="https://reactjs.org/" target="_blank">React</a> to create more complex & interactive interface.
             </p>
-          </div>
+          </div> -->
           </article>
         </div>
       </div>
