about article body

--- a/index.html
+++ b/index.html
@@ -339,28 +339,37 @@
             <a href="pages/about.html" class="btn btn-primary">About Page<i class="fas fa-arrow-up-right-from-square"></i></a>
 
           </div>
-            <!-- <div class="about-body">
-            <p>
-              <i class="fa-brands fa-free-code-camp"></i>
-              <span class="item io-item-title">FreeCodeCamp</span>
-              <a title="Responsive Web Design certificate" href="https://www.freecodecamp.org/certification/boitumelo-sempe/responsive-web-design" target="_blank">Responsive Web Design.</a>
-            </p>
-            <p>
-              <i class="fa-solid fa-user-graduate"></i>
-              <span class="item io-item-title">University of pretoria</span>
-              <a href="https://www.up.ac.za/" target="_blank">Bachelors degree (Bpolsci)</a>
-            </p>
-            <p>
-              <i class="fa-solid fa-graduation-cap"></i>
-              <span class="item io-item-title">International School of South Africa</span>
-              <a href="https://www.issa.co.za/" target="_blank">Cambridge International AS and A Levels</a>
-            </p>
-            <p>
-              <i class="fa-solid fa-headset"></i>
-              <span class="item io-item-title">Compensation Fund - Dept of Labour</span>
-              <a href="https://www.labour.gov.za/Contacts/Pages/Contacts-CF.aspx" target="_blank">Customer Care Agent</a>
-            </p>
+          <div class="article-body">
 
+            <div class="body-item">
+              <i class="fa-brands fa-free-code-camp"></i>
+              <h3 class="body-item-title">freeCodeCamp</h3>
+              <a class="body-item-link" title="Responsive Web Design certificate"
+                href="https://www.freecodecamp.org/certification/boitumelo-sempe/responsive-web-design"
+                target="_blank">Certificate in Responsive Web Design.</a>
+            </div>
+
+            <div class="body-item">
+              <i class="fa-solid fa-user-graduate"></i>
+              <h3 class="body-item-title">University of Pretoria</h3>
+              <a href="https://www.up.ac.za/" target="_blank">Bachelors degree (Bpolsci)</a>
+            </div>
+
+            <div class="body-item">
+              <i class="fa-solid fa-user-graduate"></i>
+              <h3 class="body-item-title">International School of South Africa</h3>
+              <a href="https://www.issa.co.za/" target="_blank">Cambridge International AS and A Levels</a>
+            </div>
+
+            <div class="body-item">
+              <i class="fa-solid fa-headset"></i>
+              <h3 class="body-item-title">Compensation Fund - Dept of Labour</h3>
+              <a href="https://www.labour.gov.za/Contacts/Pages/Contacts-CF.aspx" target="_blank">Customer Care Agent</a>
+            </div>
+
+          </div>
+
+            <!-- <div class="about-body">
             <p>
               <i class="fab fa-html5"></i>
               I use <a href="https://html.com/semantic-markup/" target="_blank">HTML-5 Semantic Markup</a> to code accessible and responsive web pages. 
