about article body fs

--- a/pages/skills.html
+++ b/pages/skills.html
@@ -69,19 +69,19 @@
             <ul class="links">
               <!-- HOME LINK -->
               <li>
-                <i class="fas fa-lightbulb"></i>
+                <i class="fas fa-house"></i>
                 <a href="../index.html" title="web development skills" data-after="home"
                   class="scroll-link scroll-li">home</a>
               </li>
               <!-- SKILLS LINK -->
               <li>
-                <i class="fas fa-lightbulb"></i>
+                <i class="fas fa-code"></i>
                 <a href="#" title="web development skills" data-link data-after="skills"
                   class="scroll-link scroll-li">skills</a>
               </li>
               <!-- ABOUT LINK -->
               <li>
-                <i class="fas fa-user-circle"></i>
+                <i class="fas fa-user"></i>
                 <a href="about.html" title="about Boitumelo Sempe" data-link data-after="About"
                   class="scroll-link scroll-li">about</a>
               </li>
