--- a/pages/about.html
+++ b/pages/about.html
@@ -71,19 +71,19 @@
                         <ul class="links">
                             <!-- HOME LINK -->
                             <li>
-                                <i class="fas fa-lightbulb"></i>
+                                <i class="fas fa-house"></i>
                                 <a href="../index.html" title="web development skills" data-after="Home"
                                     class="scroll-link scroll-li">home</a>
                             </li>
                             <!-- SKILLS LINK -->
                             <li>
-                                <i class="fas fa-lightbulb"></i>
+                                <i class="fas fa-code"></i>
                                 <a href="skills.html" title="web development skills" data-link data-after="skills"
                                     class="scroll-link scroll-li">skills</a>
                             </li>
                             <!-- ABOUT LINK -->
                             <li>
-                                <i class="fas fa-user-circle"></i>
+                                <i class="fas fa-user"></i>
                                 <a href="#" title="about Boitumelo Sempe" data-link data-after="About"
                                     class="scroll-link scroll-li">about</a>
                             </li>
@@ -100,22 +100,6 @@
                                 <a href="#contact" title="contact-info" data-link data-after="Contact"
                                     class="scroll-link">contact</a>
                             </li>
-                            <!-- PROJECTS[PORTFOLIO] LINK -->
-                            <!-- <li>
-                            <i class="fab fa-github"></i>
-                            <a href="#projects" title="github repositories" data-after="portfolio"
-                              class="scroll-link scroll-li">portfolio</a>
-                          </li> -->
-                            <!-- SOCIALS -->
-                            <!-- <li>
-                            <i class="fas fa-user-friends"></i>
-                            <a href="#footer" title="social-links" data-after="Socials" class="scroll-link scroll-li">socials</a>
-                          </li> -->
-                            <!-- FORM -->
-                            <!-- <li>
-                            <i class="fas fa-at"></i>
-                            <a href="forms/form.html" title="contact-form" data-after="form" class="scroll-li">form</a>
-                          </li> -->
 
                         </ul>
                         <div class="contact-links">
