--- a/pages/about.html
+++ b/pages/about.html
@@ -165,56 +165,36 @@
                                     <a href="mailto:bshakex@gmail.com?subject=CV Request" class="cv">Request CV</a>
                                 </p>
                             </div>
-                            <div class="about-body">
-                                <p>
+                            <div class="article-body">
+
+                                <div class="body-item">
                                     <i class="fa-brands fa-free-code-camp"></i>
-                                    <span class="item io-item-title">FreeCodeCamp</span>
-                                    <a title="Responsive Web Design certificate"
+                                    <h3 class="body-item-title">freeCodeCamp</h3>
+                                    <a class="body-item-link" title="Responsive Web Design certificate"
                                         href="https://www.freecodecamp.org/certification/boitumelo-sempe/responsive-web-design"
-                                        target="_blank">Responsive Web Design.</a>
-                                </p>
-                                <p>
+                                        target="_blank">Certificate in Responsive Web Design.</a>
+                                </div>
+
+                                <div class="body-item">
                                     <i class="fa-solid fa-user-graduate"></i>
-                                    <span class="item io-item-title">University of pretoria</span>
+                                    <h3 class="body-item-title">University of Pretoria</h3>
                                     <a href="https://www.up.ac.za/" target="_blank">Bachelors degree (Bpolsci)</a>
-                                </p>
-                                <p>
-                                    <i class="fa-solid fa-graduation-cap"></i>
-                                    <span class="item io-item-title">International School of South Africa</span>
+                                </div>
+
+                                <div class="body-item">
+                                    <i class="fa-solid fa-user-graduate"></i>
+                                    <h3 class="body-item-title">International School of South Africa</h3>
                                     <a href="https://www.issa.co.za/" target="_blank">Cambridge International AS and A
                                         Levels</a>
-                                </p>
-                                <p>
+                                </div>
+
+                                <div class="body-item">
                                     <i class="fa-solid fa-headset"></i>
-                                    <span class="item io-item-title">Compensation Fund - Dept of Labour</span>
+                                    <h3 class="body-item-title">Compensation Fund - Dept of Labour</h3>
                                     <a href="https://www.labour.gov.za/Contacts/Pages/Contacts-CF.aspx"
                                         target="_blank">Customer Care Agent</a>
-                                </p>
+                                </div>
 
-                                <p>
-                                    <!-- <i class="fa-solid fa-code"></i> -->
-                                    <i class="fab fa-html5"></i>
-                                    I use <a href="https://html.com/semantic-markup/" target="_blank">HTML-5 Semantic
-                                        Markup</a> to code accessible and responsive web pages.
-                                    Additionally, I implement On-Page Search Engine Optimization techniques.
-                                </p>
-                                <p>
-                                    <i class="fa-brands fa-sass"></i>
-                                    Syntactically Awesome Style Sheets <br>(<a href="https://sass-lang.com/"
-                                        target="_blank">Sass</a>) is my preferred CSS preprocessor in creating
-                                    eye-catching & responsive user interface.
-                                </p>
-                                <p>
-                                    <i class="fa-brands fa-js"></i>
-                                    To create dynamic & interactive User Interface I script <a
-                                        href="https://developer.mozilla.org/en-US/docs/Web/JavaScript"
-                                        target="_blank">Javascript</a> algorithms and basic APIs.
-                                </p>
-                                <p>
-                                    <i class="fa-brands fa-react"></i>
-                                    I am currently learning the javascript framework <a href="https://reactjs.org/"
-                                        target="_blank">React</a> to create more complex & interactive interface.
-                                </p>
                             </div>
                         </article>
                     </div>
