--- a/pages/about.html
+++ b/pages/about.html
@@ -162,7 +162,7 @@
                                 <p class="intro">Boitumelo 'Shakex' Sempe is a South Africa based International
                                     Relations graduate and Front-End Web
                                     Developer specializing in Responsive Web Design and User Experience.
-                                    <a href="mailto:bshakex@gmail.com?subject=CV Request" class="cv">Request CV</a>
+                                    <a href="mailto:bshakex@gmail.com?subject=CV Request" class="btn btn-dark">Request CV<i class="fas fa-envelope"></i></a>
                                 </p>
                             </div>
                             <div class="article-body">
