--- a/index.html
+++ b/index.html
@@ -344,27 +344,31 @@
             <div class="body-item">
               <i class="fa-brands fa-free-code-camp"></i>
               <h3 class="body-item-title">freeCodeCamp</h3>
+              <p>Certificate in Responsive Web Design.</p>
               <a class="body-item-link" title="Responsive Web Design certificate"
                 href="https://www.freecodecamp.org/certification/boitumelo-sempe/responsive-web-design"
-                target="_blank">Certificate in Responsive Web Design.</a>
+                target="_blank"><i class="fas fa-arrow-up-right-from-square"></i>freecodecamp.org/certification/</a>
             </div>
 
             <div class="body-item">
               <i class="fa-solid fa-user-graduate"></i>
               <h3 class="body-item-title">University of Pretoria</h3>
-              <a href="https://www.up.ac.za/" target="_blank">Bachelors degree (Bpolsci)</a>
+              <p>BPolSci International Relations.</p>
+              <a href="https://www.up.ac.za/" target="_blank"><i class="fas fa-arrow-up-right-from-square"></i>www.up.ac.za/</a>
             </div>
 
             <div class="body-item">
-              <i class="fa-solid fa-user-graduate"></i>
+              <i class="fa-solid fa-graduation-cap"></i>
               <h3 class="body-item-title">International School of South Africa</h3>
-              <a href="https://www.issa.co.za/" target="_blank">Cambridge International AS and A Levels</a>
+              <p>Cambridge International Advanced Subsidiary & Advanced level.</p>
+              <a href="https://www.issa.co.za/" target="_blank"><i class="fas fa-arrow-up-right-from-square"></i>www.issa.co.za</a>
             </div>
 
             <div class="body-item">
               <i class="fa-solid fa-headset"></i>
               <h3 class="body-item-title">Compensation Fund - Dept of Labour</h3>
-              <a href="https://www.labour.gov.za/Contacts/Pages/Contacts-CF.aspx" target="_blank">Customer Care Agent</a>
+              <p>Customer Care Agent.</p>
+              <a href="https://www.labour.gov.za/Contacts/Pages/Contacts-CF.aspx" target="_blank"><i class="fas fa-arrow-up-right-from-square"></i>www.labour.gov.za</a>
             </div>
 
           </div>
