--- a/pages/work.html
+++ b/pages/work.html
@@ -142,22 +142,18 @@
     <!--HERO-->
     <section id="home" data-hero class="banner about-banner">
         <div class="hero">
-            <div class="hero-content">
-                <div class="hero-title">
-                    <h1 class="hero-title-header"><a href="#main">Front-end web developer</a></h1>
-                    <p class="hero-description">
-                        my name is<br>boitumelo sempe
-                    </p>
-                    <p class="hero-meta-description" id="aka">a.k.a</p>
+            <div class="hero-index-content">
+                <div class="content-title">
+                    <h1>Front-End Web Developer</h1>
+                    <h2>Boitumelo<span> Shakex</span><br>Sempe</h2>
                 </div>
-                <a href="#main" class="scroll-link hero-cta" type="button" title="Main Content" id="cta-header">
-                    <span style="--i:1;">S</span>
-                    <span style="--i:2;">h</span>
-                    <span style="--i:3;">a</span>
-                    <span style="--i:4;">k</span>
-                    <span style="--i:5;">e</span>
-                    <span style="--i:6;">x</span>
-                </a>
+                <div class="content-value">
+                    <p>Accessible, Immersive & Engaging <br>
+                        <span>responsive web design</span></p>
+                    <div class="cta">
+                        <a href="#main" class="btn">view projects<i class="fa-solid fa-angles-right"></i></a>
+                    </div>
+                </div>
             </div>
         </div>
     </section>
