skills page links

--- a/index.html
+++ b/index.html
@@ -201,7 +201,7 @@
                 <li>CSS-3</li>
                 <li>Javascript</li>
               </ul>
-              <a href="pages/skills.html" class="btn btn-light">read more<i class="fas fa-angles-right"></i></a>
+              <a href="pages/skills.html#section-1" class="btn btn-light">read more<i class="fas fa-angles-right"></i></a>
             </div>
           </div>
           <div class="skill-section section-2">
@@ -214,7 +214,7 @@
                 <li>React-JS</li>
                 <li>JQuery</li>
               </ul>
-              <a href="pages/skills.html" class="btn btn-light">read more<i class="fas fa-angles-right"></i></a>
+              <a href="pages/skills.html#section-2" class="btn btn-light">read more<i class="fas fa-angles-right"></i></a>
             </div>
           </div>
 
@@ -228,7 +228,7 @@
                 <li>Node-JS</li>
                 <li>Visual Studio Code</li>
               </ul>
-              <a href="pages/skills.html" class="btn btn-dark">read more<i class="fas fa-angles-right"></i></a>
+              <a href="pages/skills.html#section-3" class="btn btn-dark">read more<i class="fas fa-angles-right"></i></a>
             </div>
           </div>
 
@@ -241,7 +241,7 @@
                 <li>Customer Care</li>
                 <li>Creativity</li>
               </ul>
-              <a href="pages/skills.html" class="btn btn-dark">read more<i class="fas fa-angles-right"></i></a>
+              <a href="pages/skills.html#section-4" class="btn btn-dark">read more<i class="fas fa-angles-right"></i></a>
             </div>
           </div>
 
