--- a/pages/skills.html
+++ b/pages/skills.html
@@ -231,7 +231,7 @@
           </div>
 
           <div class="skill-section-container">
-            <div class="skill-section page-skill-section section-1">
+            <div  id="section-1" class="skill-section page-skill-section section-1">
               <div class="skill-section-title section-title-1">
                 <h3>web accessibility & <br> responsive web design</h3>
                 <p>websites that provide a good User Experience and look good on all devices.</p>
@@ -281,7 +281,7 @@
               </div>
             </div>
 
-            <div class="skill-section page-skill-section section-2">
+            <div  id="section-2" class="skill-section page-skill-section section-2">
               <div class="skill-section-title section-title-2">
                 <h3>immersive Interface &<br>Engaging Experience</h3>
                 <p>websites that provide a good User Experience and look good on all devices.</p>
@@ -326,7 +326,7 @@
               </div>
             </div>
 
-            <div class="skill-section page-skill-section section-3 light-section">
+            <div  id="section-3" class="skill-section page-skill-section section-3 light-section">
               <div class="skill-section-title section-title-3">
                 <h3>Version Control &<br>development tools</h3>
                 <p>websites that provide a good User Experience and look good on all devices.</p>
@@ -400,7 +400,7 @@
               </div>
             </div>
 
-            <div class="skill-section page-skill-section section-4 light-section">
+            <div  id="section-4" class="skill-section page-skill-section section-4 light-section">
               <div class="skill-section-title section-title-4">
                 <h3>Interpersonal & <br> Soft Skills</h3>
                 <p>Communication & team work skills</p>
