--- a/index.html
+++ b/index.html
@@ -50,13 +50,13 @@
 
 <body>
   <!-- LOADER -->
-  <div class="loader_bg">
+  <!-- <div class="loader_bg">
     <div class="spinner">
       <div class="sector sector-1"></div>
       <div class="sector sector-2"></div>
       <div class="sector sector-3"></div>
     </div>
-  </div>
+  </div> -->
   <!-- HEADER -->
   <header id="header" data-header class="header">
     <!-- SKIP TO MAIN LINK -->
@@ -201,7 +201,7 @@
                 <li>CSS-3</li>
                 <li>Javascript</li>
               </ul>
-              <a href="pages/skills.html#main" class="btn btn-light">view skills<i class="fas fa-angles-right"></i></a>
+              <a href="pages/skills.html#section-1" class="btn btn-light">view skills<i class="fas fa-angles-right"></i></a>
             </div>
           </div>
           <div class="skill-section section-2">
@@ -214,7 +214,7 @@
                 <li>React-JS</li>
                 <li>JQuery</li>
               </ul>
-              <a href="pages/skills.html#main" class="btn btn-light">read more<i class="fas fa-angles-right"></i></a>
+              <a href="pages/skills.html#section-2" class="btn btn-light">read more<i class="fas fa-angles-right"></i></a>
             </div>
           </div>
 
@@ -228,7 +228,7 @@
                 <li>Node-JS</li>
                 <li>Visual Studio Code</li>
               </ul>
-              <a href="pages/skills.html#main" class="btn btn-dark">read more<i class="fas fa-angles-right"></i></a>
+              <a href="pages/skills.html#section-3" class="btn btn-dark">read more<i class="fas fa-angles-right"></i></a>
             </div>
           </div>
 
@@ -241,7 +241,7 @@
                 <li>Customer Care</li>
                 <li>Creativity</li>
               </ul>
-              <a href="pages/skills.html#main" class="btn btn-dark">read more<i class="fas fa-angles-right"></i></a>
+              <a href="pages/skills.html#section-4" class="btn btn-dark">read more<i class="fas fa-angles-right"></i></a>
             </div>
           </div>
 
@@ -587,6 +587,7 @@
 <!-- BOTTOM NAVIGATION -->
 <div class="bottom-nav" id="bottom-nav">
   <figure class="link-item io-item item io-item-1">
+    <!-- <a href="https://wa.me/+27716876941"><i class="fa-brands fa-whatsapp"></i></a> -->
     <a href="https://wa.me/+27716876941"><i class="fa-brands fa-whatsapp"></i></a>
   </figure>
   <figure class="link-item io-item item io-item-2">
