--- a/pages/skills.html
+++ b/pages/skills.html
@@ -281,7 +281,7 @@
               </div>
             </div>
 
-            <div  id="section-2" class="skill-section page-skill-section section-2">
+            <div  id="section-2" class="skill-section page-skill-section section-2 darkest-section">
               <div class="skill-section-title section-title-2">
                 <h3>immersive Interface &<br>Engaging Experience</h3>
                 <p>websites that provide a good User Experience and look good on all devices.</p>
