bottom nav links

--- a/index.html
+++ b/index.html
@@ -547,7 +547,7 @@
         </form>
       </div>
       <!-- BOTTOM FOOTER -->
-      <div class="footer-bottom">
+      <div id="footer-bottom" class="footer-bottom">
         <img src="img/shakex-sempe-logo.png" loading="lazy" alt="Shakex Sempe Web Developer logo">
         
         <div class="footer-item">
@@ -588,13 +588,13 @@
 <div class="bottom-nav" id="bottom-nav">
   <figure class="link-item io-item item io-item-1">
     <!-- <a href="https://wa.me/+27716876941"><i class="fa-brands fa-whatsapp"></i></a> -->
-    <a href="https://wa.me/+27716876941"><i class="fa-brands fa-whatsapp"></i></a>
+    <a href="#contact"><i class="fa-brands fa-whatsapp"></i></a>
   </figure>
   <figure class="link-item io-item item io-item-2">
     <a href="#home"><i class="fas fa-house"></i></a>
   </figure>
   <figure class="link-item io-item item io-item-3">
-    <a href="#contact"><i class="fas fa-envelope"></i></a>
+    <a href="#footer-bottom"><i class="fas fa-envelope"></i></a>
   </figure>
 </div>
   <!-- PRELOADER SCRIPT -->
