--- a/pages/skills.html
+++ b/pages/skills.html
@@ -234,7 +234,7 @@
             <div id="section-1" class="skill-section page-skill-section section-1">
               <div class="skill-section-title section-title-1">
                 <h3>web accessibility & <br> responsive web design</h3>
-                <p>websites that provide a good User Experience and look good on all devices.</p>
+                <p>User friendly websites that <br> adapt in appearance on all devices.</p>
                 <!-- <img src="../img/trevor-cole-zMEzuZlmIQY-unsplash.jpg" loading="lazy" alt="Keyboard"> -->
                 <img src="../img/sergi-kabrera-2xU7rYxsTiM-unsplash-min.jpg" loading="lazy" alt="Keyboard">
               </div>
@@ -284,7 +284,7 @@
             <div  id="section-2" class="skill-section page-skill-section section-2 darkest-section">
               <div class="skill-section-title section-title-2">
                 <h3>immersive Interface &<br>Engaging Experience</h3>
-                <p>websites that provide a good User Experience and look good on all devices.</p>
+                <p>Good looking, interactive and <br> easy to navigate User Interface.</p>
                 <img src="../img/martin-katler-o9XN28KdyN8-unsplash-min.jpg" loading="lazy" alt="Keyboard">
               </div>
               <div class="skill-section-content">
@@ -329,7 +329,9 @@
             <div  id="section-3" class="skill-section page-skill-section section-3 light-section">
               <div class="skill-section-title section-title-3">
                 <h3>Version Control &<br>development tools</h3>
-                <p>websites that provide a good User Experience and look good on all devices.</p>
+                <p>Tools used to create, debug & manage changes to software code and programs.
+                  
+                </p>
                 <img src="../img/hugo-barbosa-TnG2q8FtXsg-unsplash-min.jpg" loading="lazy" alt="Keyboard">
               </div>
               <div class="skill-section-content">
@@ -403,7 +405,7 @@
             <div  id="section-4" class="skill-section page-skill-section section-4 light-section">
               <div class="skill-section-title section-title-4">
                 <h3>Interpersonal & <br> Soft Skills</h3>
-                <p>Communication & team work skills</p>
+                <p>Communication, interaction & team work skills</p>
                 <img src="../img/liana-mikah-sK1nYjXcXCY-unsplash-min.jpg" loading="lazy" alt="Keyboard">
               </div>
               <div class="skill-section-content">
