skill sectio copy

--- a/pages/skills.html
+++ b/pages/skills.html
@@ -405,7 +405,7 @@
             <div  id="section-4" class="skill-section page-skill-section section-4 light-section">
               <div class="skill-section-title section-title-4">
                 <h3>Interpersonal & <br> Soft Skills</h3>
-                <p>Communication, interaction <br>& team work skills</p>
+                <p>Communication, creativity, <br> interaction & team work skills</p>
                 <img src="../img/liana-mikah-sK1nYjXcXCY-unsplash-min.jpg" loading="lazy" alt="Keyboard">
               </div>
               <div class="skill-section-content">
