--- a/pages/skills.html
+++ b/pages/skills.html
@@ -235,6 +235,11 @@
               <div class="skill-section-title section-title-1">
                 <h3>web accessibility & <br> responsive web design</h3>
                 <p>User friendly websites <br> that adapt to all devices.</p>
+                <!-- <ul>
+                  <li>HTML-5</li>
+                  <li>CSS-3</li>
+                  <li>Javascript</li>
+                </ul> -->
                 <!-- <img src="../img/trevor-cole-zMEzuZlmIQY-unsplash.jpg" loading="lazy" alt="Keyboard"> -->
                 <img src="../img/sergi-kabrera-2xU7rYxsTiM-unsplash-min.jpg" loading="lazy" alt="Keyboard">
               </div>
@@ -249,7 +254,7 @@
                     <li>Applied Visual Design</li>
                     <li>Semantic Markup</li>
                     <li>Search engine optimization</li>
-                    <li>Form Elements</li>
+                    <li>HTML Forms & Tables</li>
                   </ul>
                 </article>
 
@@ -329,9 +334,12 @@
             <div  id="section-3" class="skill-section page-skill-section section-3 light-section">
               <div class="skill-section-title section-title-3">
                 <h3>Version Control &<br>development tools</h3>
-                <p>Tools used to create & <br> manage software code.
-                  
-                </p>
+                <p>Tools used to create & <br> manage software code.</p>
+                <!-- <ul>
+                  <li>Git & GitHub</li>
+                  <li>Node-JS</li>
+                  <li>Visual Studio Code</li>
+                </ul> -->
                 <img src="../img/hugo-barbosa-TnG2q8FtXsg-unsplash-min.jpg" loading="lazy" alt="Keyboard">
               </div>
               <div class="skill-section-content">
@@ -405,7 +413,11 @@
             <div  id="section-4" class="skill-section page-skill-section section-4 light-section">
               <div class="skill-section-title section-title-4">
                 <h3>Interpersonal & <br> Soft Skills</h3>
-                <p>Communication, creativity, <br> interaction & team work skills</p>
+                <p>Communication, creativity, <br> interaction & team work.</p>
+                <!-- <ul>
+                  <li>Customer Care</li>
+                  <li>Creativity</li>
+                </ul> -->
                 <img src="../img/liana-mikah-sK1nYjXcXCY-unsplash-min.jpg" loading="lazy" alt="Keyboard">
               </div>
               <div class="skill-section-content">
