--- a/index.html
+++ b/index.html
@@ -195,12 +195,12 @@
             <div class="skill-section-title section-title-1">
               <img src="img/sergi-kabrera-2xU7rYxsTiM-unsplash-min.jpg" loading="lazy" alt="Keyboard">
               <h3>web accessibility & <br> responsive web design</h3>
-              <!-- <p>User friendly websites look good on all devices.</p> -->
-              <ul>
+              <p>User friendly websites <br> that adapt to all devices.</p>
+              <!-- <ul>
                 <li>HTML-5</li>
                 <li>CSS-3</li>
                 <li>Javascript</li>
-              </ul>
+              </ul> -->
               <a href="pages/skills.html#section-1" class="btn btn-light">view skills<i class="fas fa-angles-right"></i></a>
             </div>
           </div>
@@ -208,13 +208,13 @@
             <div class="skill-section-title section-title-2">
               <img src="img/martin-katler-o9XN28KdyN8-unsplash-min.jpg" loading="lazy" alt="Keyboard">
               <h3>immersive Interface &<br>Engaging Experience</h3>
-              <!-- <p>User friendly websites look good on all devices.</p> -->
-              <ul>
+              <p>appealing user interface & <br>interactive user experience</p>
+              <!-- <ul>
                 <li>Sass</li>
                 <li>React-JS</li>
                 <li>JQuery</li>
-              </ul>
-              <a href="pages/skills.html#section-2" class="btn btn-light">read more<i class="fas fa-angles-right"></i></a>
+              </ul> -->
+              <a href="pages/skills.html#section-2" class="btn btn-light">view skills<i class="fas fa-angles-right"></i></a>
             </div>
           </div>
 
@@ -222,13 +222,13 @@
             <div class="skill-section-title section-title-3">
               <h3>Version Control &<br>development tools</h3>
               <img src="img/hugo-barbosa-TnG2q8FtXsg-unsplash-min.jpg" loading="lazy" alt="Keyboard">
-              <!-- <p>User friendly websites look good on all devices.</p> -->
-              <ul>
+              <p>Tools used to create & <br> manage software code.</p>
+              <!-- <ul>
                 <li>Git & GitHub</li>
                 <li>Node-JS</li>
                 <li>Visual Studio Code</li>
-              </ul>
-              <a href="pages/skills.html#section-3" class="btn btn-dark">read more<i class="fas fa-angles-right"></i></a>
+              </ul> -->
+              <a href="pages/skills.html#section-3" class="btn btn-dark">view skills<i class="fas fa-angles-right"></i></a>
             </div>
           </div>
 
@@ -236,12 +236,12 @@
             <div class="skill-section-title section-title-4">
               <img src="img/liana-mikah-sK1nYjXcXCY-unsplash-min.jpg" loading="lazy" alt="Keyboard">
               <h3>Interpersonal & <br> Soft Skills</h3>
-              <!-- <p>Communication & Team work skills</p> -->
-              <ul>
+              <p>Communication, creativity, <br> interaction & team work skills</p>
+              <!-- <ul>
                 <li>Customer Care</li>
                 <li>Creativity</li>
-              </ul>
-              <a href="pages/skills.html#section-4" class="btn btn-dark">read more<i class="fas fa-angles-right"></i></a>
+              </ul> -->
+              <a href="pages/skills.html#section-4" class="btn btn-dark">view skills<i class="fas fa-angles-right"></i></a>
             </div>
           </div>
 
