skill section btn width

--- a/index.html
+++ b/index.html
@@ -236,7 +236,7 @@
             <div class="skill-section-title section-title-4">
               <img src="img/liana-mikah-sK1nYjXcXCY-unsplash-min.jpg" loading="lazy" alt="Keyboard">
               <h3>Interpersonal & <br> Soft Skills</h3>
-              <p>Communication, creativity, <br> interaction & team work skills</p>
+              <p>Communication, creativity, <br> interaction & team work.</p>
               <!-- <ul>
                 <li>Customer Care</li>
                 <li>Creativity</li>
