bottom nav icons

--- a/index.html
+++ b/index.html
@@ -588,13 +588,13 @@
 <div class="bottom-nav" id="bottom-nav">
   <figure class="link-item io-item item io-item-1">
     <!-- <a href="https://wa.me/+27716876941"><i class="fa-brands fa-whatsapp"></i></a> -->
-    <a href="#contact"><i class="fa-brands fa-whatsapp"></i></a>
+    <a href="#contact" title="Contact Info"><i class="fas fa-envelope"></i></a>
   </figure>
   <figure class="link-item io-item item io-item-2">
-    <a href="#home"><i class="fas fa-house"></i></a>
+    <a href="#home" title="Home"><i class="fas fa-house"></i></a>
   </figure>
   <figure class="link-item io-item item io-item-3">
-    <a href="#footer-bottom"><i class="fas fa-envelope"></i></a>
+    <a title="Footer" href="#footer-bottom"><i class="fa-solid fa-circle-question"></i></a>
   </figure>
 </div>
   <!-- PRELOADER SCRIPT -->
