projects aside link i

--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
               </li>
               <!-- WORK[PROJECTS] LINK -->
               <li>
-                <i class="fa-solid fa-earth-africa"></i>
+                <i class="fa-solid fa-laptop-code"></i>
                 <a href="pages/work.html" title="github repositories" data-link data-after="Projects"
                   class="scroll-link scroll-li">projects</a>
               </li>
