--- a/index.html
+++ b/index.html
@@ -191,6 +191,7 @@
           
         </div>
         <div class="skill-section-container">
+          <a class="skills-btn" href="pages/skills.html">page<i class="fas fa-angles-right"></i></a>
           <div class="skill-section section-1">
             <div class="skill-section-title section-title-1">
               <img src="img/sergi-kabrera-2xU7rYxsTiM-unsplash-min.jpg" loading="lazy" alt="Keyboard">
