remove skills-btn and test sticky section btns

--- a/index.html
+++ b/index.html
@@ -191,7 +191,7 @@
           
         </div>
         <div class="skill-section-container">
-          <a class="skills-btn" title="Skills Page" href="pages/skills.html">page<i class="fas fa-angles-right"></i></a>
+          <a class="skills-btn" title="Skills Page" href="pages/skills.html"><i class="fas fa-arrow-up-right-from-square"></i></a>
           <div class="skill-section section-1">
             <div class="skill-section-title section-title-1">
               <img src="img/sergi-kabrera-2xU7rYxsTiM-unsplash-min.jpg" loading="lazy" alt="Keyboard">
