--- a/index.html
+++ b/index.html
@@ -395,36 +395,36 @@
         <!-- EMAIL ITEM -->
         <article title="Email Info" class="contact-item io-item">
           <div class="title">
-            <h3>Email</h3>
+            <!-- <h3>Email</h3> -->
             <div class="icon">
               <i class="fas fa-envelope"></i></div>
           </div>
           <div class="contact-info">
             <h4>Email address</h4>
             <p>bshakex@gmail.com</p>
-            <a href="mailto:bshakex@gmail.com" title="Email me">send email<i class="fas fa-at"></i>
+            <a href="mailto:bshakex@gmail.com" class="btn btn-primary" title="Email me">send email<i class="fas fa-at"></i>
             </a>
           </div>
         </article>
         <!-- WHATSAPP NUMBER -->
         <article title="WhatsApp Number" class="contact-item io-item">
           <div class="title">
-            <h3>WhatsApp</h3>
+            <!-- <h3>WhatsApp</h3> -->
             <div class="icon">
               <i class="fa-brands fa-whatsapp"></i>
             </div>
           </div>
           <div id="whatsapp" class="contact-info">
-            <h4>whatsApp contact</h4>
+            <h4>whatsApp</h4>
             <p>+27716876941</p>
-            <a href="https://wa.me/+27716876941" target="_blank" title="WhatsApp text me">send text<i
+            <a href="https://wa.me/+27716876941" class="btn btn-primary" target="_blank" title="WhatsApp">send text<i
                 class="fa-solid fa-comment-dots"></i></a>
           </div>
         </article>
         <!-- PHONE NUMBER -->
         <article title="Phone Number" class="contact-item io-item">
           <div class="title">
-            <h3>Phone</h3>
+            <!-- <h3>Phone</h3> -->
             <div class="icon">
               <i class="fas fa-phone-alt"></i>
             </div>
@@ -432,7 +432,7 @@
           <div id="phone" class="contact-info">
             <h4>phone number</h4>
             <p>+27 72 600 5104</p>
-            <a href="tel:+27726005104" title="Call me">call now<i class="fas fa-phone-volume"></i></a>
+            <a href="tel:+27726005104" class="btn btn-primary" title="Call me">call now<i class="fas fa-phone-volume"></i></a>
           </div>
         </article>
       </div>
