--- a/pages/work.html
+++ b/pages/work.html
@@ -234,7 +234,7 @@
         </div>
     </section>
         <!-- CUBE -->
-        <div id="cube" class="cube-container">
+        <!-- <div id="cube" class="cube-container">
             <div class="scene io-item">
                 <div class="floor"></div>
                 <div class="cube io-item">
@@ -258,7 +258,7 @@
                 </div>
                 <div class="ball io-item"></div>
             </div>
-        </div>
+        </div> -->
         <section id="work" class="link-section">
             <div class="work">
                 <div class="work-container">
