--- a/index.html
+++ b/index.html
@@ -296,7 +296,7 @@
           <div class="item-flex-container">
             <div class="item-content">
               <figure class="item-image">
-                <img src="img/munch-desk.png" alt="Orich Trading & Projects logo">
+                <img src="img/munch-up-desk.png" alt="Munch Up logo">
               </figure>
             </div>
             <div class="item-header">
